# music-player

./: .gitignore  LICENSE  README.md  compile.pyw  music-player.pyw  pyproject.toml  requirements.txt  settings.json  setup.bat
.github/workflows/: release.yml  test.yml
