[project]
name = "music-player"
version = "1.0.2"
description = "A simple music player using python and vlc"
requires-python = ">=3.11"
dependencies = [
    "ctktooltip>=0.9",
    "customtkinter>=5.2.2",
    "numpy>=2.4.0",
    "pillow>=12.2.0",
    "python-vlc>=3.0.21203",
    "tinytag>=2.2.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "ruff>=0.15.18",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

preview = true

[tool.ruff.lint]
select = ["E", "W", "F", "B", "UP", "RUF"]
ignore = ["E501", "UP015", "E712"]
extend-select = ["TID252"]