[project]
name = "music-player"
version = "1.0.2"
description = "A simple music player using python and vlc"
requires-python = ">=3.13"
dependencies = [
    "ctktooltip>=0.9",
    "customtkinter>=6.0.0",
    "numpy>=2.5.0",
    "pillow>=12.3.0",
    "python-vlc>=3.0.21203",
    "tinytag>=2.2.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "ruff>=0.16.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

preview = true

[tool.ruff.lint]
select = ["E", "W", "F", "B", "UP", "RUF"]
ignore = ["line-too-long", "redundant-open-modes", "true-false-comparison"]
extend-select = ["relative-imports"]